# imdb_assetscraper

./: .gitignore  Pipfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-package-publish.yml
imdb_assetscraper/: __init__.py  imdb_assetscraper.py
imdb_assetscraper/tests/: test_imdbscraper.py
tests/: test_imdbscraper.py
