[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imdb_assetscraper"
description = "imdb_assetscraper"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "beautifulsoup4",
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["imdb_assetscraper"]

[tool.setuptools.dynamic]
version = { attr = "imdb_assetscraper.__version__" }
readme = { file = ["README.rst"] }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "tox>=4.28.4",
]

