[metadata]
name = imdb_assetscraper
version = 0.5.2
author = Stefan Seltmann
author_email = s.seltmann06@web.de
description = imdb_assetscraper
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/stefanseltmann77/imdb_scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = imdb_assetscraper
install_requires =
    beautifulsoup4
python_requires = >=3.9

[flake8]
;ignore = E226,E302,E41
max-line-length = 120
exclude = */tests/*
max-complexity = 10

[mypy]
ignore_missing_imports = True